添加 JUC 所有文档，优化首页大图模块

--- a/docs/45.开发/20.算法/35.算法模板 - 二叉树遍历.md
+++ b/docs/45.开发/20.算法/35.算法模板 - 二叉树遍历.md
@@ -770,3 +770,75 @@ public class PostorderTraversal {
 内容来自：`https://leetcode-cn.com/problems/binary-tree-preorder-traversal/solution/leetcodesuan-fa-xiu-lian-dong-hua-yan-shi-xbian-2/`。
 
 题目来自力扣。
+
+
+
+## 番外
+
+将字符串转为树节点。
+
+> 字符串不带 null
+
+当 `data = "1,2"`，输出 `[1,null,2]`，因为 1 < 2，所以 `root = 1`，`root.left = null`，`root.right = 2`。
+
+```java
+public class Codec {
+
+    public TreeNode deserialize(String data) {
+        if (data == null) {
+            return null;
+        }
+        String[] nodes = data.split(",");
+        return dfs(0, nodes.length - 1, nodes);
+    }
+    // start 为遍历的起点，length 为遍历的长度，nodes 为遍历的数据
+    TreeNode dfs(int start, int length, String[] nodes) {
+        if (start > length) {
+            return null;
+        }
+        int j = start + 1;
+        int t = Integer.parseInt(nodes[start]);
+        TreeNode ans = new TreeNode(t);
+        // 计算左子树的长度 j
+        while (j <= length && Integer.parseInt(nodes[j]) <= t) {
+            j++;
+        }
+        // 左子树的长度为遍历的长度
+        ans.left = dfs(start + 1, j - 1, nodes);
+        // 左子树的长度为起点，字符串的长度为终点
+        ans.right = dfs(j, length, nodes);
+        return ans;
+    }
+}
+```
+
+> 字符串自带 null
+
+如果 `data = "1,null,2"`，输出 `[1,null,2]`。
+
+```java
+public class Codec {
+
+    public TreeNode deserialize(String data) {
+        if (data == null) {
+            return null;
+        }
+        String[] nodes = data.split(",");
+        return dfs(0, nodes);
+    }
+    public TreeNode dfs(int index, String[] nodes) {
+        if (nodes.length - 1 < index) {
+            return null;
+        }
+        // 字符串的 null 在树节点直接添加为 null
+        if(nodes[index].equals("null")) {
+            return null;
+        }
+        TreeNode root = new TreeNode(Integer.parseInt(nodes[index]));
+        root.left = dfs(index * 2 + 1, nodes);
+        root.right = dfs(index * 2 + 2, nodes);
+        return root;
+    }
+}
+```
+
