--- a/docs/80.关于/06.关于 - 本站/14.本站 - 评论模块.md
+++ b/docs/80.关于/06.关于 - 本站/14.本站 - 评论模块.md
@@ -338,7 +338,8 @@ export default {
     twikooInit() {
       twikoo
         .init({
-          envId: "https://twikoo-snowy-rho.vercel.app/",
+          // envId 要切换成自己的，这是评论区的 ID，一个博客只能有一个评论区 ID，用别人的评论区 ID，导致读者评论时或发送到别人的评论区里
+          envId: "你的 envId",
           el: "#tcomment",
           // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数
           // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
@@ -404,6 +405,8 @@ export default {
 }
 </style>
 ```
+
+> 注意 67 行的 evnId 换成自己的，即 Vercel 部署 Twikoo 的地址 Vercel Domains，如 `https://xxx.vercel.app`。
 
 写完 Vue 组件，接下来注册使用，在 config.js（新版是 config.ts）的 plugins 模块下，添加如下内容：
 
