--- a/docs/80.关于/06.关于 - 本站/28.本站 - 代码块隐藏模块.md
+++ b/docs/80.关于/06.关于 - 本站/28.本站 - 代码块隐藏模块.md
@@ -99,7 +99,7 @@ export default {
   },
   watch: {
     $route(to, from) {
-      if (this.$route.hash == "") {
+      if (to.path != from.path || this.$route.hash == "") {
         setTimeout(() => {
           this.addExpand(40);
         }, 1000);
