--- a/docs/10.Java/10.Java优化 - JUC/06.JUC - 共享模型之管程安全.md
+++ b/docs/10.Java/10.Java优化 - JUC/06.JUC - 共享模型之管程安全.md
@@ -1,7 +1,7 @@
 ---
-title: JUC - 共享模型之管程
+title: JUC - 共享模型之管程安全
 date: 2022-05-08 17:45:24
-permalink: /java/juc/tube-side/
+permalink: /java/juc/tube-side-security/
 categories:
   - JUC
 tags: 
@@ -184,6 +184,7 @@ public class Test {
     // 创建一个锁
     static final Object room = new Object();
     public static void main(String[] args) throws InterruptedException {
+        
         Thread t1 = new Thread(() -> {
             for (int i = 0; i < 5000; i++) {
                 synchronized (room) {
@@ -191,6 +192,7 @@ public class Test {
                 }
             }
         }, "t1");
+        
         Thread t2 = new Thread(() -> {
             for (int i = 0; i < 5000; i++) {
                 synchronized (room) {
@@ -217,7 +219,7 @@ public class Test {
 - Synchronized(对象) 中的对象，可以想象为一个房间（room），有唯一入口（门）房间只能一次进入一人进行计算，线程 t1，t2 想象成两个人
 - 这时候如果 t2 也运行到了 synchronized(room) 时，它发现门被锁住了，只能在门外等待，发生了上下文切换，阻塞住了
 - 这中间即使 t1 的 cpu 时间片不幸用完，被踢出了门外（不要错误理解为锁住了对象就能一直执行下去哦），这时门还是锁住的，t1 仍拿着钥匙，t2 线程还在阻塞状态进不来，只有下次轮到 t1 自己再次获得时间片时才能开门进入
-- 当 t1 执行完 synchronized{} 块内的代码，这时候才会从 obj 房间出来并解开门上的锁，唤醒 t2 线程把钥匙给他。t2 线程这时才可以进入 obj 房间，锁住了门拿上钥匙，执行它的 count-- 代码
+- 当 t1 执行完 `synchronized{}` 块内的代码，这时候才会从 obj 房间出来并解开门上的锁，唤醒 t2 线程把钥匙给他。t2 线程这时才可以进入 obj 房间，锁住了门拿上钥匙，执行它的 `count--` 代码
 
 用图来表示：
 
@@ -269,16 +271,19 @@ public class Test1 {
 
     public static void main(String[] args) throws InterruptedException {
         Room room = new Room();
+        
         Thread t1 = new Thread(() -> {
             for (int j = 0; j < 5000; j++) {
                 room.increment();
             }
         }, "t1");
+        
         Thread t2 = new Thread(() -> {
             for (int j = 0; j < 5000; j++) {
                 room.decrement();
             }
         }, "t2");
+        
         t1.start();
         t2.start();
         t1.join();
@@ -1113,6 +1118,155 @@ public class Test {
             }
         });
         log.debug("{}", i);
+    }
+}
+```
+
+## 习题
+
+### 卖票练习
+
+```java
+public class ExerciseSell {
+    public static void main(String[] args) {
+        TicketWindow ticketWindow = new TicketWindow(2000);
+        List<Thread> list = new ArrayList<>();
+        // 用来存储买出去多少张票，Vector 是线程安全类
+        List<Integer> sellCount = new Vector<>();
+        for (int i = 0; i < 2000; i++) {
+            Thread t = new Thread(() -> {
+                // 分析这里的竞态条件
+                int count = ticketWindow.sell(randomAmount());
+                // 虽然多个线程都操作 sellCount，但 sellCount 是 Vector 线程安全类
+                sellCount.add(count);
+            });
+            list.add(t);
+            t.start();
+        }
+        list.forEach((t) -> {
+            try {
+                t.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        });
+        // 买出去的票求和
+        log.debug("selled count:{}",sellCount.stream().mapToInt(c -> c).sum());
+        // 剩余票数
+        log.debug("remainder count:{}", ticketWindow.getCount());
+    }
+    // Random 为线程安全
+    static Random random = new Random();
+    // 随机 1~5
+    public static int randomAmount() {
+        return random.nextInt(5) + 1;
+    }
+}
+class TicketWindow {
+    private int count;
+    public TicketWindow(int count) {
+        this.count = count;
+    }
+    public int getCount() {
+        return count;
+    }
+    public int sell(int amount) {
+        if (this.count >= amount) {
+            this.count -= amount;
+            return amount;
+        } else {
+            return 0;
+        }
+    }
+}
+```
+
+sell 方法是临界区，因为多个线程都能同时进入 sell 方法操作 count，所以锁住该方法即可。
+
+```java
+public synchronized int sell(int amount) {
+    if (this.count >= amount) {
+        this.count -= amount;
+        return amount;
+    } else {
+        return 0;
+    }
+}
+```
+
+### 转账练习
+
+```java
+public class ExerciseTransfer {
+    public static void main(String[] args) throws InterruptedException {
+        Account a = new Account(1000);
+        Account b = new Account(1000);
+        Thread t1 = new Thread(() -> {
+            for (int i = 0; i < 1000; i++) {
+                a.transfer(b, randomAmount());
+            }
+        }, "t1");
+        Thread t2 = new Thread(() -> {
+            for (int i = 0; i < 1000; i++) {
+                b.transfer(a, randomAmount());
+            }
+        }, "t2");
+        t1.start();
+        t2.start();
+        t1.join();
+        t2.join();
+        // 查看转账 2000 次后的总金额
+        log.debug("total:{}",(a.getMoney() + b.getMoney()));
+    }
+    // Random 为线程安全
+    static Random random = new Random();
+    // 随机 1~100
+    public static int randomAmount() {
+        return random.nextInt(100) +1;
+    }
+}
+class Account {
+    private int money;
+    public Account(int money) {
+        this.money = money;
+    }
+    public int getMoney() {
+        return money;
+    }
+    public void setMoney(int money) {
+        this.money = money;
+    }
+    public void transfer(Account target, int amount) {
+        if (this.money > amount) {
+            this.setMoney(this.getMoney() - amount);
+            target.setMoney(target.getMoney() + amount);
+        }
+    }
+}
+```
+
+transfer 方法是临界区，所以我们需要针对 transfer 方法内部进行加锁，那么这样可以吗？为什么？
+
+```java
+public synchronized void transfer(Account target, int amount) {
+    if (this.money > amount) {
+        this.setMoney(this.getMoney() - amount);
+        target.setMoney(target.getMoney() + amount);
+    }
+}
+```
+
+直接在方法上加 synchronized，是不行的，因为有两个 Account 类，在方法上加 synchronized 等价于 `synchronized(this)`，仅仅锁住自己的对象，也就是 a 锁住自己，b 锁住自己，互不影响。如何解决呢？
+
+因为 a 和 b 都是 Account 类，所以锁住 Account 类即可，如下：
+
+```java
+public void transfer(Account target, int amount) {
+    synchronized(Account.class) {
+        if (this.money > amount) {
+            this.setMoney(this.getMoney() - amount);
+            target.setMoney(target.getMoney() + amount);
+        }
     }
 }
 ```
