--- a/docs/45.开发/20.算法/30.算法模板 - 滑动窗口模板.md
+++ b/docs/45.开发/20.算法/30.算法模板 - 滑动窗口模板.md
@@ -70,7 +70,7 @@ public void findSubArray(nums) {
 
 示例 1：
 
-```md
+```java
 输入：nums = [1,1,1,0,0,0,1,1,1,1,0], K = 2
 输出：6
 解释：[1,1,1,0,0,**1**,1,1,1,1,**1**]
